--- a/components/atoms/Container/container.module.scss
+++ b/components/atoms/Container/container.module.scss
@@ -1,27 +1,16 @@
 @import "../../../styles/global/variables";
 .container {
-  position: relative;
-  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
 
   &_global {
-    padding: 0 15px;
-
+    padding: 0 32px;
     @media only screen and (min-width: $tablet) {
-      padding: 0 30px;
+      padding: 0 47px;
     }
 
     @media only screen and (min-width: $desktop) {
-      padding: 0 60px;
-    }
-  }
-  &_content {
-    padding: 0 20px;
-
-    @media only screen and (min-width: $tablet) {
-      padding: 0 40px;
-    }
-    @media only screen and (min-width: $desktop) {
-      padding: 0 85px;
+      padding: 0 160px;
     }
   }
 }
