--- a/components/organisms/Header/header.module.scss
+++ b/components/organisms/Header/header.module.scss
@@ -1,13 +1,21 @@
+@import "../../../styles/global/variables";
 .header {
-  padding: 32px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+
+  gap: 40px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   &_logo {
     & img {
       max-width: 100px;
       height: 32px;
+      @media only screen and (min-width: $tablet) {
+        max-width: 132px;
+        height: 40px;
+      }
     }
   }
   &_navigation {
@@ -20,17 +28,70 @@
     }
     &_menu {
       position: absolute;
-      left: 0;
+      left: 32px;
       top: 99px;
       background: #fff;
-      width: 100%;
+      @media only screen and (min-width: $desktop) {
+        position: relative;
+        top: unset;
+        left: unset;
+        flex-grow: 2;
+      }
 
       ul {
         list-style: none;
+        display: inline;
 
         li {
+          position: relative;
+          font-size: 26px;
+          margin-bottom: 16px;
+          margin-right: 40px;
+          cursor: pointer;
+
+          @media only screen and (min-width: $desktop) {
+            display: inline;
+            font-size: 14px;
+            margin-bottom: 0;
+          }
         }
       }
     }
+  }
+}
+.dropdown_container {
+  position: relative;
+  left: 0;
+  top: 25px;
+  display: flex !important;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  padding-bottom: 16px;
+  @media only screen and (min-width: $desktop) {
+    position: absolute;
+  }
+
+  li {
+    margin-right: 0 !important;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+}
+.dropdownIcon {
+  &::after {
+    content: "";
+    right: -25px;
+    top: -2px;
+    width: 25px;
+    position: absolute;
+    height: 25px;
+    background-image: url("../../../public/assets/icons/arrow-right.svg");
+    background-repeat: no-repeat;
+    transform: rotate(90deg);
+    background-position: center;
   }
 }
