--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -7,6 +7,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
+  color: #636363;
 }
 
 h1 {
