--- a/components/atoms/Container/container.module.scss
+++ b/components/atoms/Container/container.module.scss
@@ -13,4 +13,15 @@
       padding: 0 160px;
     }
   }
+
+  &_content {
+    padding: 0 16px;
+    @media only screen and (min-width: $tablet) {
+      padding: 0 32px;
+    }
+
+    @media only screen and (min-width: $desktop) {
+      padding: 0 64px;
+    }
+  }
 }
