--- a/components/organisms/Banner/banner.module.scss
+++ b/components/organisms/Banner/banner.module.scss
@@ -1,58 +1,35 @@
+@import "../../../styles/global/variables";
 .banner {
-  &_overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    cursor: pointer;
-  }
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
 }
 
 .banner {
   position: relative;
   height: calc(100vh - 99px);
-  // background: linear-gradient(
-  //     180deg,
-  //     rgba(255, 255, 255, 0.6) 0%,
-  //     rgba(255, 255, 255, 0) 100%
-  //   ),
-  //   url("../../../public/assets/images/background-image.jpg") center bottom /
-  //     cover no-repeat;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   overflow: hidden;
+  padding: 40px 32px;
 
   &_cta {
+    margin-bottom: 16px;
+
     h1 {
       margin-bottom: 16px;
     }
     p {
       font-size: 18px;
       margin-bottom: 24px;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    .image_caption {
-      //
-    }
-  }
-
-  .trustpilot_ratings {
-    &_trustscore {
-    }
-    &_reviews {
+      color: $colour-text-blue;
     }
   }
 }
