--- a/components/organisms/Header/header.module.scss
+++ b/components/organisms/Header/header.module.scss
@@ -27,9 +27,11 @@
     }
     &_menu {
       position: absolute;
-      left: 32px;
-      top: 99px;
+      left: 0;
+      top: 98px;
       background: #fff;
+      width: 100%;
+      z-index: 9999;
       @media only screen and (min-width: $desktop) {
         position: relative;
         top: unset;
