--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -6,12 +6,16 @@ html {
   padding: 0px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
+  font-size: 14px;
   color: #636363;
 }
 
 h1 {
   font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  color: $colour-text-blue;
   @media only screen and (min-width: $tablet) {
     font-size: 32px;
   }
